fix iphone top-border gap

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 /* WRAPPER */
 #wrapper{
   max-width:1100px;
-  width:100%;
+  width:99.5%;
   margin:0.5em auto 0 auto;
 }
 /* Elements of Style*/
